--- a/branches/category/of/app/views/partials/_tagcloud.html.erb
+++ b/branches/category/of/app/views/partials/_tagcloud.html.erb
@@ -1,15 +1,23 @@
-<div class="tag_cloud">
-  <h3><%= image_tag("of/icon01.gif", :align => "left") %> <%= _('Tag Cloud') %></h3>
-  <% tag_counts=User.tag_counts() %>
-  <% tag_counts.sort! { |a,b| a.count <=> b.count}%>
-    <% sum=0 %>
-    <% tag_counts.each { |tag| -%>
-      <% sum=sum+tag.count %>
-    <% } -%>
+<!--<div class="tag_cloud">
+  <h3><%#= image_tag("of/icon01.gif", :align => "left") %> <%#= _('Tag Cloud') %></h3>
+  <%# tag_counts=User.tag_counts() %>
+  <%# tag_counts.sort! { |a,b| a.count <=> b.count}%>
+    <%# sum=0 %>
+    <%# tag_counts.each { |tag| -%>
+      <%# sum=sum+tag.count %>
+    <%# } -%>
   
-    <% tag_counts.each { |tag| -%>
-      <font size=<%= (10.0*tag.count/sum).to_i %> >
-            <%= link_to tag.name, {:action => "tag", :id=> tag.name} %>
+    <%# tag_counts.each { |tag| -%>
+      <font size=<%#= (10.0*tag.count/sum).to_i %> >
+            <%#= link_to tag.name, {:action => "tag", :id=> tag.name} %>
             </font> &nbsp;
-    <% } -%>
+    <%# } -%>
+  </div>
+  -->
+  <div id="tag_cloud">
+    <p>
+    <% Tagcloud.tags_assign_font_size( 'ALL' ).each do | s | -%>
+      <%=link_to "#{ s[ :name ] }", search_openfoundry_path( :query => "tag:#{ s[ :name ] }", :commit => 'search' ), :style => "font-size: #{ s[ :font ] }px;" %>
+    <% end -%>
+    </p>
   </div>
