--- a/branches/category/of/app/views/partials/_qrcode_project.html.erb
+++ b/branches/category/of/app/views/partials/_qrcode_project.html.erb
@@ -5,8 +5,7 @@
     <%= h(@project.name) %>
   </center>
 </div>
-<a href="#" onclick="Effect.toggle('qr', 'slide'); return false" style="padding:8px;float:right">Slide</a>
-<br />
+<!--<a href="#" onclick="Effect.toggle('qr', 'slide'); return false" style="padding:8px;float:right">Slide</a>-->
 <% end -%>
 
 <%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => ''}  %>
