--- a/trunk/of/app/views/site_admin/site_admin/index.html.erb
+++ b/trunk/of/app/views/site_admin/site_admin/index.html.erb
@@ -1,6 +1,7 @@
 <h2>網站管理</h2>
+<div style="width:50%;float:left;">
 <ul>
-  <li><%= link_to ("Project"), site_admin_projects_path %></li>
+  <li><%= link_to ("Projects"), site_admin_projects_path %></li>
   <li><%= link_to ("News"), site_admin_news_index_path %></li>
   <li><%= link_to ("User"), site_admin_users_path %></li>
   <li><%= link_to ("Site Member Control"), {:action => :member_edit } %></li>
@@ -16,23 +17,25 @@
     <div id='ProjectMemberNew' style='overflow:visible'>
     </div>
   </li>
-  <li>
-    <%= link_to ("Resend Stomp msg for ALL MODELS"), {:action => :resend }, {:confirm => 'really?'} %>
-    (BE CAREFUL! for data sync only...)
-  </li>
-  <li><%= link_to ("Rebuild Ferret Index"), {:action => :aaf_rebuild }, {:confirm => 'really?'} %></li>
-  <li><%= link_to ("bat_add_users"), {:action => :batch_add_users } %></li>
-  <li><%= link_to ("Run some code on all instances of Rails"), {:action => :edit_code } %></li>
-  <li><%= link_to ("Send site mail"), {:action => :new_site_mail } %></li>
-  <li><%= link_to ("Check big files"), {:action => :big_files } %></li>
 </ul>
+</div>
+<div style="width:50%;float:left;">
+  <ul>
+    <li><%= link_to ("Resend Stomp msg for ALL MODELS"), {:action => :resend }, {:confirm => 'really?'} %>(BE CAREFUL! for data sync only...)</li>
+    <li><%= link_to ("Rebuild Ferret Index"), {:action => :aaf_rebuild }, {:confirm => 'really?'} %></li>
+    <li><%= link_to ("bat_add_users"), {:action => :batch_add_users } %></li>
+    <li><%= link_to ("Run some code on all instances of Rails"), {:action => :edit_code } %></li>
+    <li><%= link_to ("Send site mail"), {:action => :new_site_mail } %></li>
+    <li><%= link_to ("Check big files"), {:action => :big_files } %></li>
+  </ul>
 <br/>
-
+<br/>
+<br/>
+</div>
 <h2>監控與分析</h2>
 <ul>
   <li><a href="https://www.google.com/analytics/reporting/?scid=5220412">Google Analytic</a></li>
 </ul>
-<br/>
 
 <h2>NSC相關</h2>
 <ul>
