--- a/of/app/views/user/_myprojects.html.erb
+++ b/of/app/views/user/_myprojects.html.erb
@@ -5,31 +5,45 @@
 <a id="myprojects"></a>
 <% module_content = capture do -%>
   <% if not my_projects.blank? %>
-    <table>
+    <script type="text/javascript" src="/of/javascripts/jquery.tablednd.js"></script>
+    <script type="text/javascript">
+      jQuery(function() {
+       // Initialise the table
+          jQuery("#project_list").tableDnD({
+            onDrop: function(table, row) {
+                jQuery.get("/of/user/ajax_update_project_list?"+jQuery.tableDnD.serialize());
+                //alert(jQuery.tableDnD.serialize());
+              }  
+            });
+         jQuery("#project_list tr").hover(function() {
+          jQuery(this.cells[1]).addClass('showDragHandle');
+          }, function() {
+          jQuery(this.cells[1]).removeClass('showDragHandle');
+         });
+
+      });
+    </script>
+    <table id="project_list">
       <% my_projects.each do | p | %>
-        <tr>
-          <td rowspan="2" style="vertical-align: middle;">
+        <tr id="<%=p.id-%>">
+          <td>
             <a href="<%=project_url( p.id ) %>">
               <img src="<%=url_for( :controller => :images, :action => "cached_image", :id => "#{ p.icon }_64" ) %>" style="vertical-align: middle;">
             </a>
           </td>
-          <td><h3>&nbsp;<a href="<%=project_url( p.id ) %>"><%="#{ p.name }" %></a></h3></td>
-          <td align="right"><%="#{ tz_date( p.updated_at ) }" %></td>
+          <td>
+            <h3><a href="<%=project_url( p.id ) %>"><%="#{ p.name }" %></a></h3>
+            <p>
+            <a href="<%="#{ root_path }projects/#{ p.id }/rt" %>">Issue Tracker</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/kwiki" %>">Wiki</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/download" %>">Release</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/member_edit" %>">Member</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/permission_edit/" %>">Permission</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/viewvc" %>">Version Control</a>
+            <a href="<%="#{ root_path }projects/#{ p.id }/survey" %>">Surveys</a>
+            </p>
+          </td>    
         </tr>
-
-        <tr>
-          <td colspan="2">
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/rt" %>">Issue Tracker</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/kwiki" %>">Wiki</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/download" %>">Release</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/member_edit" %>">Member</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/permission_edit/" %>">Permission</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/viewvc" %>">Version Control</a></span>
-            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/survey" %>">Surveys</a></span>
-          </td>
-        </tr>
-
-        <tr><td height="15"></td></tr>
       <% end %> 
     </table>
   <% else %>
