--- a/of/public/stylesheets/openfoundry.css
+++ b/of/public/stylesheets/openfoundry.css
@@ -265,7 +265,40 @@ width:500px;
     margin: 2px;
   }
 
+/* for dashboard start */
+.severity{border:1px solid #000;padding:1.5px; margin-right:5px;color:#000;}
+.P1{background-color:#FF6F6F;}
+.P2{background-color:#FFAFAF;}
+.P3{background-color:#FFE8BF;}
+.P4{background-color:#F9AFFF;}
+.P5{background-color:#F35FFF;}
+.sub_title{font-size:0.7em;}
+#my_tickets_help{
+  display:block;
+  position:absolute;
+  left:190px;
+  top:25px;
+  width:16px;
+  height:16px;
+  background: url('/of/images/help.png') no-repeat;
+}
 
+table#project_list {
+  margin:0;
+  padding:0;
+}
+#project_list td.showDragHandle{ 
+  /*background: none repeat scroll 0 0 #f9f9f9;*/
+  border: 1px solid #CCCCCC;
+  background:url(/of/images/move_alt.png) no-repeat right 10px;
+/*  padding:3px; */
+}
+#project_list p{margin-top:25px;padding-bottom:15px;}
+#project_list h3{display:inline;}
+#project_list td.showDragHandle div{display:inline;}
+#project_list p a{display:block;padding:2px 10px;font-weight:bold;color:#404040;float:left;margin-left:10px;background:#CCC;}
+#project_list p a:hover {color:#0088B5}
+/*for dashboard end*/
 
 /* for layout of news list */
 .sort { margin-bottom: 5px; }
