--- a/trunk/of/app/views/projects/show.html.erb
+++ b/trunk/of/app/views/projects/show.html.erb
@@ -19,13 +19,13 @@
 <%# end -%>
 
 <!--
-<% module_title = capture do %>
-  <%=_( 'Project Issues' ) %>
-<% end %>
-<% module_content = capture do %>
-  <%= render :partial => "project_issues", :locals => { :rss => @rss }%>
-<% end %>
-<%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
+<%# module_title = capture do %>
+  <%#=_( 'Project Issues' ) %>
+<%# end %>
+<%# module_content = capture do %>
+  <%#= render :partial => "project_issues", :locals => { :rss => @rss }%>
+<%# end %>
+<%#= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
 
 -->
 <% module_title = capture do %>
