--- a/trunk/of/app/views/projects/applied.html.erb
+++ b/trunk/of/app/views/projects/applied.html.erb
@@ -1,1 +1,1 @@
-<%= _("Project Applied") + OPENFOUNDRY_SITE_ADMIN_EMAIL + '.' %>
+<%= "#{t("Project Applied")}<br/>#{OPENFOUNDRY_SITE_ADMIN_EMAIL}." %>
