--- a/trunk/of/app/views/projects/_form.html.erb
+++ b/trunk/of/app/views/projects/_form.html.erb
@@ -49,7 +49,7 @@ AAA
   choosen_licenses = (@project.license || "").split(",").grep(/./).map(&:to_i)
   tmp_licenses = ""
   Project::LICENSE_DISPLAY_KEYS.each do |i|
-    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : Project.license_to_s(i) ) + "<br>\n"
+    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : t(Project.license_to_s(i)) ) + "<br>\n"
   end
   tmp_licenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_licenses}</div>"
 %>
@@ -59,7 +59,7 @@ AAA
   Project::CONTENT_LICENSE_DISPLAY_KEYS.each do |i|
     txt = Project.content_license_to_s(i)
     txt += " " + cc_images(i)
-    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : Project.content_license_to_s(i) ) + "<br>\n"
+    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : t(Project.content_license_to_s(i)) ) + "<br>\n"
   end
   tmp_contentlicenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_contentlicenses}</div>"
 %>
