--- a/branches/category/of/app/views/user/_myissues.html.erb
+++ b/branches/category/of/app/views/user/_myissues.html.erb
@@ -24,7 +24,8 @@
         </tr>
       <% end %>
     </table>
-  <% else %>
+<%=link_to _('More...'), "/of/user/dashboard2", :class => "more" %>    
+<% else %>
     Sorry, there is no data for your request.
   <% end %>
 <% end %>
