--- a/branches/category/of/app/views/openfoundry/search.html.erb
+++ b/branches/category/of/app/views/openfoundry/search.html.erb
@@ -1,14 +1,15 @@
 <div id="search_result">
   <% module_content = capture do -%>
-    <%#= @final_query %>
     <div id="search">
-      <h1><%= _('search') %></h1>
-      <%= render :partial => 'partials/search', :locals =>{:size => 45, :adv => true}%>	
+      <div class="module-title">
+        <h2 class="title"><%= _('Projects')%><%= _('search') %></h2>
+        <%= render :partial => 'partials/search', :locals =>{:size => 45, :adv => true}%>	
+      </div>
     </div>
+
   <% end -%>
   <%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => 'square1'} %>
   <% module_content = capture do -%>
-  <h1><%= _('Search Result') %></h1>
   <%unless @results.empty?%>
     <%if params[:chk] %>
       <%= paginate = will_paginate @results %>
@@ -22,26 +23,26 @@
       <%= paginate %>
     <% else -%>
       <%unless @filter_blank_or_not.blank? or @keyword.blank? %>
-        <%= 'About ' + ts(@results.total_hits.to_s) + ' projects (' + @elapsed_seconds.to_s + ' seconds.)'%>
+        <%= "About #{ts(if @results.class == Array then @results.count else @results.total_hits end)} projects (#{@elapsed_seconds.to_s} seconds.)"%>
         <%= paginate = will_paginate @final_project_list %>  
-        <table class='form-table'>
+        <table class='ProjectList'>
           <tr>
-            <th><u><%="Logo" %></u></th>
-            <th><%#=link_to "Name", sort_param( 'searched', Project, 'name', 'name' ) %><u>Name</u></th>
-            <th><%#=link_to 'Summary', sort_param( 'searched', Project, 'summary', 'summary' ) %><u>Summary</u></th>
-            <th><%#=link_to 'Category', sort_param( 'searched', Project, 'category', 'category' ) %><u>Catgory</u></th>
-            <th><%= "Tags" %></th>
+            <th width='5%'>Logo</th>
+            <th width='20%'>Name</th>
+            <th width='45%'>Summary</th>
+            <th width='15%'>Catgory</th>
+            <th width='15%'>Tags</th>
           </tr>
+          <% if @keyword.include?('tag:') then @keyword = @keyword.split(/:/)[1].split(' ') else @keyword = @keyword.split(' ') end -%>
+          <% highlight_keyword = @keyword -%>
           <% i = 0; class_name = ''; -%> 
           <% for project in @final_project_list -%> 
             <% i = 1 - i -%> 
             <% if i == 1; class_name = 'odd'; else; class_name = 'even'; end; -%> 
               <tr class="item_h <%=class_name %>">
                 <td><%= project_logo_link(project)%></td>
-                <td><a href = "<%=url_for( :controller => 'projects', :action => 'show', :id => project.id ) %>"><%=h( project.name ) %></a></td>
-                <% @query = @query.split(/:/)[1] if @query.include?('tag:') -%>
-                <% highlight_keyword = @query -%>
-                <td><%=highlight(h( truncate(project.summary, :length => 25, :separator => ' ') ), highlight_keyword ) %></td>
+                <td class='pj_name'><a href = "<%=url_for( :controller => 'projects', :action => 'show', :id => project.id ) %>"><%=h( project.name ) %></a></td>
+                <td><%=highlight(h( project.summary ), highlight_keyword ) %></td>
                 <td><%=highlight(h( project.cattag.name ), highlight_keyword ) unless project.cattag.nil? %></td>
                 <td><%=highlight(h( project.alltags.map(&:name).join(", ") ), highlight_keyword ) unless project.alltags.nil? %></td>
               </tr>
@@ -49,11 +50,11 @@
           </table>
           <%= paginate %>
         <% else -%>
-          input some keywords!
+          <%= _('Please input some keyword')%>
         <% end -%>
       <% end -%>
     <%else-%>
-      no record!
+      <%= _('No record')%>
     <%end-%>
   <% end -%>
   <%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => 'square1'} %>
